Correction alignement footer

--- a/style.css
+++ b/style.css
@@ -428,7 +428,6 @@ aside p {
 .footer {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     flex-wrap: wrap;
     margin-top: 60px;
     padding-left: 50px;
@@ -473,6 +472,10 @@ footer a:hover {
         margin-right: 0px;
     }
 
+    #activities {
+        margin-right: 20px;
+    }
+
     .footer {
         padding-right: 50px;
     }
@@ -485,6 +488,10 @@ footer a:hover {
 
     body {
         width: 100%;
+    }
+
+    header, #cityFilterInfo, #activities {
+        margin-left: 0px;
     }
 
     /* Header - Mobile */
@@ -590,6 +597,7 @@ footer a:hover {
         display: flex;
         flex-direction: column;
         margin-left: 20px;
+        margin-right: 0px;
         margin-top: 0px;
     }
 
